@@ -2,12 +2,12 @@
 .\"     Title: macusers
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 02 Sep 2011
+.\"      Date: 13 Oct 2011
 .\"    Manual: Netatalk 2.2
 .\"    Source: Netatalk 2.2
 .\"  Language: English
 .\"
-.TH "MACUSERS" "1" "02 Sep 2011" "Netatalk 2.2" "Netatalk 2.2"
+.TH "MACUSERS" "1" "13 Oct 2011" "Netatalk 2.2" "Netatalk 2.2"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -21,8 +21,10 @@
 .SH "NAME"
 macusers \- List the users connecting via AFP
 .SH "SYNOPSIS"
-.HP \w'\fBmacusers\fR\fB\fR\fBmacusers\fR\fB\fR\ 'u
-\fBmacusers\fR\fB\fR\fBmacusers\fR\fB\fR \-v | \-version | \-\-version | \-h | \-help | \-\-help 
+.HP \w'\fBmacusers\fR\fB\fR\ 'u
+\fBmacusers\fR\fB\fR
+.HP \w'\fBmacusers\fR\fB\fR\ 'u
+\fBmacusers\fR\fB\fR \-v | \-version | \-\-version | \-h | \-help | \-\-help 
 .SH "DESCRIPTION"
 .PP
 \fBmacusers\fR
